--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-introdution/observations.py
 introdution/praticaAlheia.py
 .vscode
+**/observations.py
 intermediary/pratica_alheia.py
-intermediary/observations.py
